<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Crime solved.</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="contact_police_label">Contact Police</string>
    <string name="first_button">First</string>
    <string name="last_button">Last</string>
    <string name="date_button_label">Date: %1$s</string>
    <string name="time_button_label">Time: %1$s</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="confirm_button">OK</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="delete_crime">Delete Crime</string>
    <string name="requires_police_label">Requires police.</string>
    <string name="choose_suspect_text">Choose Suspect</string>
    <string name="chosen_suspect_label">Suspect: %1$s</string>

    <string name="contact_suspect_label">Call %1$s</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="solved_crime_list_item_description">Solved Crime</string>
    <string name="unsolved_crime_list_item_description">Unsolved Crime</string>


</resources>
